# piece-of-shit

./: .gitignore  env_example  pyproject.toml
.docker/: Makefile  docker-compose.yml  entrypoint.sh
.docker/dockerfiles/aiogram/: Dockerfile
.docker/dockerfiles/django_backend/: Dockerfile
bot/: main.py
bot/core/: scheduler.py  setup.py
bot/core/callbacks/: calendar.py  menu.py
bot/core/handlers/: budget.py  cancel.py  categories.py  commands.py  expenses.py  feedback.py  goals.py  hints.py  inline.py  menu.py  passive.py  planned.py  quick_entry.py  recalculate.py  reports.py  settings.py  start.py  start_handler.py
bot/core/keyboards/: calendar.py  menu.py
bot/core/middleware/: user_sync_middlware.py
bot/core/states/: budget_states.py  category_states.py  feedback_states.py  goal_states.py  planned_states.py  quick_entry_states.py  report_states.py  settings_states.py
bot/core/texts/: __init__.py  defaults.py  registry.py
bot/handlers/: start_handler.py
bot/services/: __init__.py  base_service.py  category_prompt_service.py  command_service.py  date_parser.py  fsm_message_tracker.py  group_notification_service.py  message_cleaner.py  message_service.py  message_updater.py  tool_box.py
bot/tests/: test_command_service.py
nginx/: nginx.conf
project/: manage.py
project/apps/core/: admin.py
project/apps/core/fixtures/: commands.json
project/apps/core/migrations/: 0001_initial.py  (+9 more)
project/apps/expenses/: admin.py  apps.py
project/config/: asgi.py  settings.py  wsgi.py
tests/: conftest.py
tests/bot/: test_command_flow.py
(+48 files in other folders)
