[tool.poetry]
name = "piece-of-shit"
version = "0.1.0"
description = "desc"
authors = ["alexpuzhdev <168548067+alexpuzhdev@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.6"
djangorestframework = "^3.16.1"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
aiogram = "^3.22.0"
django-jazzmin = "^3.0.0"
psycopg = {extras = ["binary"], version = "^3.2.10"}
daphne = {extras = ["http2"], version = "^4.2.1"}
psycopg2-binary = "^2.9.10"
django-environ = "^0.12.0"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
flake8 = "^7.1.1"
watchfiles = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
